# masquerade-nodes-comfyui

./: .gitignore  .gitmodules  LICENSE  MaskNodes.py  README.md  __init__.py  pyproject.toml
examples/: composition-by-photobashing.json  filter-by-season.json  inpaint-faces.json  inpaint-with-lora.json  qrcode-monster-controlnet.json
tests/: general_tests.json  multisubject_tests.json  separation_tests.json
